# luftballons

./: .gitignore  HACKING.md  Makefile  Makefile.defaults  README.md  TODO.md  buffer.c  buffer.h  bufpool.c  bufpool.h  camera.c  camera.h  colorbuf.c  colorbuf.h  configure.ac  dae_load.c  dae_load.cc  dae_load.h  draw_queue.c  draw_queue.h  drawlist.c  drawlist.h  ebuf.c  ebuf.h  fragment.glsl  fragment_texmap.glsl  fragment_vcolor.glsl  interval.c  interval.h  main.c  material.c  material.h  matrix.c  matrix.h  mesh.c  mesh.h  object.c  object.h  quat.c  quat.h  (+19 more)
include/: Makefile  Makefile.am
include/luftballons/: colorbuf.h  dae_load.h  draw_op.h  draw_proc.h  material.h  matrix.h  object.h  quat.h  shader.h  state.h  target.h  texmap.h  uniform.h
ref_model/: README  cube.dae  cylinder.dae  vcolor_cube_small.dae
ref_models/: P51_Mustang.dae  P51_Mustang.tif  P51_canopy.tif  bump.tif
src/: Makefile  Makefile.am  bufpool.c  bufpool.h  collada_includes.h  colorbuf.c  colorbuf.h  dae_load.cc  dae_load.h  demo.c  draw_op.c  draw_op.h  draw_proc.c  draw_proc.h  draw_queue.c  draw_queue.h  drm.supp  ebuf.c  ebuf.h  fragment_copy.glsl  fragment_lighting.glsl  fragment_texmap.glsl  fragment_vcolor.glsl  interval.c  interval.h  luftdraw.pc.in  main.c  material.c  material.h  matrix.c  matrix.h  mesh.c  mesh.h  object.c  object.h  quat.c  quat.h  refcount.c  refcount.h  shader.c  (+18 more)
