nobase_include_HEADERS = \
	luftballons/colorbuf.h	\
	luftballons/matrix.h	\
	luftballons/object.h	\
	luftballons/quat.h	\
	luftballons/shader.h	\
	luftballons/state.h	\
	luftballons/target.h	\
	luftballons/texmap.h	\
	luftballons/uniform.h

if HAVE_COLLADA
nobase_include_HEADERS += luftballons/dae_load.h
endif
